crates/kwctl/tests/data/vap/vap-binding-params-no-action.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "kw-scaffold-demo"
spec:
  policyName: "vap-test"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
  paramRef:
    name: "replica-limit-override"
    namespace: "test"
