crates/kwctl/tests/data/vap/vap-with-k8s.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: vap-test
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    - expression: >-
        kw.k8s.apiVersion('v1').kind('ConfigMap').namespace('default').get('allowed-registries') != null
      message: "allowed-registries ConfigMap must exist"
