crates/kwctl/tests/data/vap/vap-with-namespace-object.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: vap-test
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    - expression: >-
        namespaceObject.metadata.labels['environment'] == 'production'
      message: "deployments are only allowed in production namespaces"
